--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   },
   "author": "HoseungJang",
   "license": "MIT",
-  "devDependencies": {
-    "aws-serverless-express": "^3.3.8"
-  },
+  "devDependencies": {},
   "dependencies": {
+    "aws-serverless-express": "^3.3.8",
     "express": "^4.17.1"
   }
 }
