--- a/practice-nodejs-typescript/package.json
+++ b/practice-nodejs-typescript/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.56",
+    "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^3.9.5"
   }
 }
