--- a/practice-aws-serverless-express/package.json
+++ b/practice-aws-serverless-express/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.56",
-    "serverless-plugin-typescript": "^1.1.9"
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "aws-serverless-express": "^3.3.8",
