--- a/practice-aws-serverless-express/package.json
+++ b/practice-aws-serverless-express/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.56",
+    "@types/aws-serverless-express": "^3.3.3",
     "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^3.9.5"
   },
