--- a/practice-corgi/package.json
+++ b/practice-corgi/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HoseungJang",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "serverless-offline": "^6.5.0",
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/joi": "^14.3.4",
+    "vingle-corgi": "^3.2.0"
+  }
 }
